Remove obsolete code and disabled tests from VaultEncryptionHelper/Test
* Remove disabled tests from VaultEncryptionHelperTest
* Refactor common setup code in VaultEncryptionHelperTest
* Remove (now obsolete) code from VaultEncryptionHelper:
  - executeVaultCommandReturningStdoutOld
  - launchProcess
* Change visibility of methods to private in VaultEncryptionHelper
  for all methods where that is possible to do without breaking things

Misc:

* Make VaultConfiguration set the tempDirectory to the Java temp
  directory if it is not specified.
* Move several generic I/O utility methods from VaultEncryptionHelper
  into Utils
* Re-order some methods in VaultEncryptionHelper based on when they
  are used
* Reduce visibility of Utils methods to package-private